force-app/main/default/objects/AgentActionOutcome__c/AgentActionOutcome__c.object-meta.xml
<CustomObject>
    <label>Agent Action Outcome</label>
    <nameField>
        <displayFormat>OUTCOME-{000000}</displayFormat>
        <label>Outcome Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agent Action Outcomes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>