force-app/main/default/objects/AgentActionOutcome__c/fields/action_name__c.field-meta.xml
<CustomField>
    <fullName>action_name__c</fullName>
    <label>Action Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>