force-app/main/default/objects/AgentActionOutcome__c/fields/cumulative_points__c.field-meta.xml
<CustomField>
    <fullName>cumulative_points__c</fullName>
    <label>Cumulative Points</label>
    <precision>8</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>