force-app/main/default/objects/AgentActionOutcome__c/fields/lesson_linked__c.field-meta.xml
<CustomField>
    <fullName>lesson_linked__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lesson Linked</label>
    <referenceTo>AgentLessonLearned__c</referenceTo>
    <relationshipLabel>Action Outcomes</relationshipLabel>
    <relationshipName>ActionOutcomes</relationshipName>
    <type>Lookup</type>
</CustomField>