force-app/main/default/objects/AgentActionOutcome__c/fields/lesson_was_helpful__c.field-meta.xml
<CustomField>
    <fullName>lesson_was_helpful__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lesson Was Helpful</label>
    <type>Checkbox</type>
</CustomField>