force-app/main/default/objects/AgentActionOutcome__c/fields/outcome__c.field-meta.xml
<CustomField>
    <fullName>outcome__c</fullName>
    <label>Outcome</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>success</fullName>
            </value>
            <value>
                <fullName>failure</fullName>
            </value>
            <value>
                <fullName>partial</fullName>
            </value>
            <value>
                <fullName>loop_detected</fullName>
            </value>
            <value>
                <fullName>fallback</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>