force-app/main/default/objects/AgentActionOutcome__c/fields/reward_points__c.field-meta.xml
<CustomField>
    <fullName>reward_points__c</fullName>
    <label>Reward Points</label>
    <precision>6</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>