force-app/main/default/objects/AgentActionOutcome__c/fields/session_id__c.field-meta.xml
<CustomField>
    <fullName>session_id__c</fullName>
    <label>Session ID</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>