force-app/main/default/objects/AgentActionOutcome__c/fields/timestamp__c.field-meta.xml
<CustomField>
    <fullName>timestamp__c</fullName>
    <label>Timestamp</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>