force-app/main/default/objects/AgentActionOutcome__c/fields/topic_area__c.field-meta.xml
<CustomField>
    <fullName>topic_area__c</fullName>
    <label>Topic Area</label>
    <length>80</length>
    <type>Text</type>
</CustomField>